--- a/Self-Study/Online lessons/Simple controls/My Control/app/src/main/AndroidManifest.xml
+++ b/Self-Study/Online lessons/Simple controls/My Control/app/src/main/AndroidManifest.xml
@@ -14,13 +14,19 @@
         android:theme="@style/Theme.MyControls"
         tools:targetApi="31">
         <activity
+            android:name=".ViewMarginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".TextColorActivity"
+            android:exported="false" />
+        <activity
             android:name=".TextViewActivity"
             android:exported="false" />
         <activity
             android:name=".TextSizeActivity"
             android:exported="false" />
         <activity
-            android:name=".TextColorActivity"
+            android:name=".ViewBorderActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
